implemented admin functionality with adding & deleting routes and flights, TODO db error log + testing

--- a/BookingSystem/Views/Admin/AdminMenu.cshtml
+++ b/BookingSystem/Views/Admin/AdminMenu.cshtml
@@ -39,7 +39,7 @@
     <div>
         @Html.ActionLink("Back to Main", "Index", "Home", new { area = "" }, new { @class = "btn btn-default" })</br>
         @Html.ActionLink("Add new admin", "RegisterAdmin", "Admin", new { @class = "btn btn-default" })</br>
-        @Html.ActionLink("See flights", "SeeRoutes", "Admin", new { @class = "btn btn-default" })</br>
+        @Html.ActionLink("See routes", "SeeRoutes", "Admin", new { @class = "btn btn-default" })</br>
         @Html.ActionLink("log out", "LogOut", "Admin", new { @class = "btn btn-default" })</br>
     </div>
 
